force-app/main/default/objects/Project__c/fields/Agency_Zip_Code_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Agency_Zip_Code_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Zip Code Assignment</label>
    <referenceTo>Agency_Zip_Code_Assignment__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>