force-app/main/default/objects/Project__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Standard</fullName>
            </value>
            <value>
                <fullName>DXV</fullName>
            </value>
            <value>
                <fullName>Grohe</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Inax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>