force-app/main/default/objects/Project__c/fields/Builder_Type__c.field-meta.xml
<CustomField>
    <fullName>Builder_Type__c</fullName>
    <description>Project builder type</description>
    <label>Builder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Builder Advantage Choice</fullName>
            </value>
            <value>
                <fullName>Builder Advantage Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>