force-app/main/default/objects/Project__c/fields/Chain_Scale__c.field-meta.xml
<CustomField>
    <fullName>Chain_Scale__c</fullName>
    <formula>TEXT( Hotel_Group__r.Chain_Scale__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain Scale</label>
    <type>Text</type>
</CustomField>