force-app/main/default/objects/Project__c/fields/ChainScale__c.field-meta.xml
<CustomField>
    <fullName>ChainScale__c</fullName>
    <description>Project chain scale</description>
    <label>ChainScale</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HotelBrand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economy Chains</fullName>
            </value>
            <value>
                <fullName>Luxury Chains</fullName>
            </value>
            <value>
                <fullName>Midscale Chains</fullName>
            </value>
            <value>
                <fullName>Upper Midscale Chains</fullName>
            </value>
            <value>
                <fullName>Upper Upscale Chains</fullName>
            </value>
            <value>
                <fullName>Upscale Chains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>