force-app/main/default/objects/Project__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Project end date, completed date</description>
    <label>Estimated Project End Date</label>
    <type>Date</type>
</CustomField>