force-app/main/default/objects/Project__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Project competitor, required only if opportunity lost</description>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Standard</fullName>
            </value>
            <value>
                <fullName>Axor</fullName>
            </value>
            <value>
                <fullName>Blanco</fullName>
            </value>
            <value>
                <fullName>Bootz</fullName>
            </value>
            <value>
                <fullName>Brizo</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Danze</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Dornbracht</fullName>
            </value>
            <value>
                <fullName>Duravit</fullName>
            </value>
            <value>
                <fullName>DXV</fullName>
            </value>
            <value>
                <fullName>Elkay</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>Franke</fullName>
            </value>
            <value>
                <fullName>Geberit</fullName>
            </value>
            <value>
                <fullName>Gerber</fullName>
            </value>
            <value>
                <fullName>Grohe</fullName>
            </value>
            <value>
                <fullName>Hansgrohe</fullName>
            </value>
            <value>
                <fullName>Jacuzzi</fullName>
            </value>
            <value>
                <fullName>Kaldewei</fullName>
            </value>
            <value>
                <fullName>Kohler</fullName>
            </value>
            <value>
                <fullName>Maax</fullName>
            </value>
            <value>
                <fullName>Mansfield</fullName>
            </value>
            <value>
                <fullName>Mirabelle</fullName>
            </value>
            <value>
                <fullName>Moen</fullName>
            </value>
            <value>
                <fullName>Newport Brass</fullName>
            </value>
            <value>
                <fullName>Niagara</fullName>
            </value>
            <value>
                <fullName>Price Pfister</fullName>
            </value>
            <value>
                <fullName>Proflo</fullName>
            </value>
            <value>
                <fullName>Rohl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>