force-app/main/default/objects/Project__c/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <description>Construction Type</description>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Annual Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>