force-app/main/default/objects/Project__c/fields/Count_Project_Agency__c.field-meta.xml
<CustomField>
    <fullName>Count_Project_Agency__c</fullName>
    <label>Count Project Agency</label>
    <summaryForeignKey>Project_Agency__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>