force-app/main/default/objects/Project__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&#39;US&#39;</defaultValue>
    <description>Project address&#39; country</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>