force-app/main/default/objects/Project__c/fields/Create_Team__c.field-meta.xml
<CustomField>
    <fullName>Create_Team__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Team</label>
    <type>Checkbox</type>
</CustomField>