force-app/main/default/objects/Project__c/fields/Faucet_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Faucet_Competitor__c</fullName>
    <description>Project faucet competitor</description>
    <label>Faucet Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Standard</fullName>
            </value>
            <value>
                <fullName>Axor</fullName>
            </value>
            <value>
                <fullName>Brizo</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Danze</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Dornbracht</fullName>
            </value>
            <value>
                <fullName>Duravit</fullName>
            </value>
            <value>
                <fullName>DXV</fullName>
            </value>
            <value>
                <fullName>Grohe</fullName>
            </value>
            <value>
                <fullName>Hansgrohe</fullName>
            </value>
            <value>
                <fullName>Kohler</fullName>
            </value>
            <value>
                <fullName>Moen</fullName>
            </value>
            <value>
                <fullName>Newport Brass</fullName>
            </value>
            <value>
                <fullName>Price Pfister</fullName>
            </value>
            <value>
                <fullName>Proflo</fullName>
            </value>
            <value>
                <fullName>Rohl</fullName>
            </value>
            <value>
                <fullName>Sigma</fullName>
            </value>
            <value>
                <fullName>Sloan</fullName>
            </value>
            <value>
                <fullName>Speakman</fullName>
            </value>
            <value>
                <fullName>Symmons</fullName>
            </value>
            <value>
                <fullName>T &amp; S</fullName>
            </value>
            <value>
                <fullName>Toto</fullName>
            </value>
            <value>
                <fullName>Watermark</fullName>
            </value>
            <value>
                <fullName>Waterworks</fullName>
            </value>
            <value>
                <fullName>Zurn</fullName>
            </value>
            <value>
                <fullName>Bootz</fullName>
            </value>
            <value>
                <fullName>Mansfield</fullName>
            </value>
            <value>
                <fullName>Western Pottery</fullName>
            </value>
            <value>
                <fullName>Gerber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>