force-app/main/default/objects/Project__c/fields/First_Level_Backup_Approver__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Backup_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Level Backup Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>