force-app/main/default/objects/Project__c/fields/has_influencers__c.field-meta.xml
<CustomField>
    <fullName>has_influencers__c</fullName>
    <label>has influencers</label>
    <summaryForeignKey>Influencers__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>