force-app/main/default/objects/Project__c/fields/has_wholesalers__c.field-meta.xml
<CustomField>
    <fullName>has_wholesalers__c</fullName>
    <label>has wholesalers</label>
    <summaryForeignKey>Wholesalers__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>