force-app/main/default/objects/Project__c/fields/Hotel_Brand__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Brand__c</fullName>
    <description>Changed name to Hotel Group as per the request</description>
    <formula>Hotel_Group__r.Hotel_Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Group</label>
    <type>Text</type>
</CustomField>