force-app/main/default/objects/Project__c/fields/Hotel_Group__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to hotel group.</description>
    <label>Hotel Brand</label>
    <referenceTo>Hotel_Group__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>