force-app/main/default/objects/Project__c/fields/HotelBrand__c.field-meta.xml
<CustomField>
    <fullName>HotelBrand__c</fullName>
    <description>Project hotel brand</description>
    <label>Hotel Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HotelGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21c Museum Hotels</fullName>
            </value>
            <value>
                <fullName>Accor Company</fullName>
            </value>
            <value>
                <fullName>Ace Hotel Group</fullName>
            </value>
            <value>
                <fullName>AC Hotel</fullName>
            </value>
            <value>
                <fullName>Affinia</fullName>
            </value>
            <value>
                <fullName>Affordable Suites of America</fullName>
            </value>
            <value>
                <fullName>AJ Capital Partners</fullName>
            </value>
            <value>
                <fullName>Aloft Hotels</fullName>
            </value>
            <value>
                <fullName>Andaz</fullName>
            </value>
            <value>
                <fullName>Ascend Collection</fullName>
            </value>
            <value>
                <fullName>Autograph Hotel</fullName>
            </value>
            <value>
                <fullName>Baymont</fullName>
            </value>
            <value>
                <fullName>Best Western</fullName>
            </value>
            <value>
                <fullName>Best Western Hotels &amp; Resorts</fullName>
            </value>
            <value>
                <fullName>Best Western Plus</fullName>
            </value>
            <value>
                <fullName>Best Western Premier</fullName>
            </value>
            <value>
                <fullName>Budget Host</fullName>
            </value>
            <value>
                <fullName>Budget Suites of America</fullName>
            </value>
            <value>
                <fullName>Cabot Lodge</fullName>
            </value>
            <value>
                <fullName>Cambria Suites</fullName>
            </value>
            <value>
                <fullName>Candlewood Suites</fullName>
            </value>
            <value>
                <fullName>Canopy</fullName>
            </value>
            <value>
                <fullName>Carlton</fullName>
            </value>
            <value>
                <fullName>Carlton Hotel Collection</fullName>
            </value>
            <value>
                <fullName>Centric</fullName>
            </value>
            <value>
                <fullName>Choice Hotels International</fullName>
            </value>
            <value>
                <fullName>citizenM Hotels</fullName>
            </value>
            <value>
                <fullName>Clarion Hotel</fullName>
            </value>
            <value>
                <fullName>Clarion Inn</fullName>
            </value>
            <value>
                <fullName>Club Med</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>