force-app/main/default/objects/Project__c/fields/HotelGroup__c.field-meta.xml
<CustomField>
    <fullName>HotelGroup__c</fullName>
    <description>Project hotel group, Based on Hotel brand, Hotel group, Scale and chain will get populated. Refer to the table</description>
    <label>Hotel Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21c Museum Hotel</fullName>
            </value>
            <value>
                <fullName>3 Palms</fullName>
            </value>
            <value>
                <fullName>Ace Hotel</fullName>
            </value>
            <value>
                <fullName>AC Hotels by Marriott</fullName>
            </value>
            <value>
                <fullName>Affinia Hotel</fullName>
            </value>
            <value>
                <fullName>Affordable Suites of America</fullName>
            </value>
            <value>
                <fullName>African Pride</fullName>
            </value>
            <value>
                <fullName>Alila</fullName>
            </value>
            <value>
                <fullName>all seasons</fullName>
            </value>
            <value>
                <fullName>aloft Hotel</fullName>
            </value>
            <value>
                <fullName>America`s Best Inn</fullName>
            </value>
            <value>
                <fullName>Americas Best Value Inn</fullName>
            </value>
            <value>
                <fullName>AmericInn</fullName>
            </value>
            <value>
                <fullName>ANA</fullName>
            </value>
            <value>
                <fullName>Andaz</fullName>
            </value>
            <value>
                <fullName>Aparthotel Adagio</fullName>
            </value>
            <value>
                <fullName>Aparthotel Adagio Access</fullName>
            </value>
            <value>
                <fullName>art&#39;otel</fullName>
            </value>
            <value>
                <fullName>Ascend Collection</fullName>
            </value>
            <value>
                <fullName>Autograph Collection</fullName>
            </value>
            <value>
                <fullName>Avid Hotels</fullName>
            </value>
            <value>
                <fullName>Baymont</fullName>
            </value>
            <value>
                <fullName>Best Western</fullName>
            </value>
            <value>
                <fullName>Best Western Hotels</fullName>
            </value>
            <value>
                <fullName>Best Western Plus</fullName>
            </value>
            <value>
                <fullName>Best Western Premier</fullName>
            </value>
            <value>
                <fullName>Bilderberg</fullName>
            </value>
            <value>
                <fullName>Budget Host</fullName>
            </value>
            <value>
                <fullName>Budget Suites of America</fullName>
            </value>
            <value>
                <fullName>Bulgari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>