force-app/main/default/objects/Project__c/fields/Initial_Specification_Fixtures__c.field-meta.xml
<CustomField>
    <fullName>Initial_Specification_Fixtures__c</fullName>
    <label>Initial Specification - Fixtures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Standard</fullName>
            </value>
            <value>
                <fullName>Blanco</fullName>
            </value>
            <value>
                <fullName>Bootz</fullName>
            </value>
            <value>
                <fullName>Duravit</fullName>
            </value>
            <value>
                <fullName>DXV</fullName>
            </value>
            <value>
                <fullName>Elkay</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>Franke</fullName>
            </value>
            <value>
                <fullName>Geberit</fullName>
            </value>
            <value>
                <fullName>Gerber</fullName>
            </value>
            <value>
                <fullName>Jacuzzi</fullName>
            </value>
            <value>
                <fullName>Kaldewei</fullName>
            </value>
            <value>
                <fullName>Kohler</fullName>
            </value>
            <value>
                <fullName>Maax</fullName>
            </value>
            <value>
                <fullName>Mansfield</fullName>
            </value>
            <value>
                <fullName>Mirabelle</fullName>
            </value>
            <value>
                <fullName>Niagara</fullName>
            </value>
            <value>
                <fullName>Sloan</fullName>
            </value>
            <value>
                <fullName>Toto</fullName>
            </value>
            <value>
                <fullName>Western Pottery</fullName>
            </value>
            <value>
                <fullName>Zurn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>