force-app/main/default/objects/Project__c/fields/Key_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project inside sales contact, copied over the quote on layout</description>
    <label>Key Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>