force-app/main/default/objects/Project__c/fields/Last_Owner__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects61</relationshipName>
    <type>Lookup</type>
</CustomField>