force-app/main/default/objects/Project__c/fields/Mock_Up__c.field-meta.xml
<CustomField>
    <fullName>Mock_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is project mock up?</description>
    <label>Mock Up</label>
    <type>Checkbox</type>
</CustomField>