force-app/main/default/objects/Project__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>Project&#39;s # of Units</description>
    <label># of Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>