force-app/main/default/objects/Project__c/fields/Owner_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active_Status__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Active Status</label>
    <type>Checkbox</type>
</CustomField>