force-app/main/default/objects/Project__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Project address&#39; zip/postal code</description>
    <label>Zip/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>