force-app/main/default/objects/Project__c/fields/Project_Count__c.field-meta.xml
<CustomField>
    <fullName>Project_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>