force-app/main/default/objects/Project__c/fields/Project_Influencers__c.field-meta.xml
<CustomField>
    <fullName>Project_Influencers__c</fullName>
    <label>Project Influencers</label>
    <type>TextArea</type>
</CustomField>