force-app/main/default/objects/Project__c/fields/Project_Influencers_Count__c.field-meta.xml
<CustomField>
    <fullName>Project_Influencers_Count__c</fullName>
    <label>Project Influencers Count</label>
    <summaryForeignKey>Influencers__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>