force-app/main/default/objects/Project__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Project Number</label>
    <type>AutoNumber</type>
</CustomField>