force-app/main/default/objects/Project__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <formula>Owner:User.FirstName &amp; &#39; &#39; &amp; Owner:User.LastName</formula>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>