force-app/main/default/objects/Project__c/fields/Project_Owner_Int_Name_Ext_Acc__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Int_Name_Ext_Acc__c</fullName>
    <formula>if(  !CONTAINS( UPPER( Owner:User.Email ) , &#39;LIXIL&#39;) , Owner:User.Contact.Account.Name , &#39;LIXIL&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Int Name/Ext Acc</label>
    <type>Text</type>
</CustomField>