force-app/main/default/objects/Project__c/fields/Project_Owner_Suporters__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Suporters__c</fullName>
    <formula>Owner:User.FirstName &amp;&quot; &quot;&amp;Owner:User.LastName &amp; 
IF(  ISBLANK(Project_Supporter_1__c ) , &quot;&quot;, &quot;, &quot;&amp;Project_Supporter_1__r.FirstName&amp;&quot; &quot;&amp; Project_Supporter_1__r.LastName) &amp; 
IF(  ISBLANK(Project_Supporter_2__c ) , &quot;&quot;, &quot;, &quot;&amp;Project_Supporter_2__r.FirstName&amp;&quot; &quot;&amp; Project_Supporter_2__r.LastName) &amp; 
IF(  ISBLANK(Project_Supporter_3__c ) , &quot;&quot;, &quot;, &quot;&amp;Project_Supporter_3__r.FirstName&amp;&quot; &quot;&amp; Project_Supporter_3__r.LastName) &amp; 
IF(  ISBLANK(Project_Supporter_4__c ) , &quot;&quot;, &quot;, &quot;&amp;Project_Supporter_4__r.FirstName&amp;&quot; &quot;&amp; Project_Supporter_4__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner/Suporters</label>
    <type>Text</type>
</CustomField>